Fix bg visibility issues on mobile

--- a/css/blog_index.css
+++ b/css/blog_index.css
@@ -27,7 +27,7 @@ html {
     align-items: center;
     justify-content: center;
     background-color: #2e344044;
-    padding: 42px;
+    padding: 24px;
     border-radius: 12px;
     backdrop-filter: blur(16px);
     box-shadow: 0 0 11px #2e3440;
